<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/sos_blur"
    tools:context=".MainMenu">

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/enter_username"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:inputType="textCapWords"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/single_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player"/>

    <Button
        android:id="@+id/multi_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplayer"/>

    <Button
        android:id="@+id/tutorial_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"/>

</LinearLayout>