<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/sos_blur"
    tools:context=".MultiplayerLobby">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/join_game_code"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_room_id"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/join_game_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/join" />

    </LinearLayout>

    <Button
        android:id="@+id/create_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create" />

    <ProgressBar
        android:id="@+id/multiplayer_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>


</LinearLayout>