<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".PreRound">

    <ProgressBar
        android:id="@+id/preround_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/preround_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/bar_chart"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/wockhardt"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/hdfc"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/tata"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/wock_rate_pre_round"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/hdfc_rate_pre_round"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/wock_rate_pre_round"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/tata_rate_pre_round"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/hdfc_rate_pre_round"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/ongc"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wock_rate_pre_round"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/reliance"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/hdfc_rate_pre_round"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/infosys"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/tata_rate_pre_round"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/ongc_rate_pre_round"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/reliance_rate_pre_round"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/ongc_rate_pre_round"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

            <TextView
                android:id="@+id/infosys_rate_pre_round"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textColor="@android:color/holo_green_light"
                android:textSize="15sp"
                app:layout_constraintHeight_default="percent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintStart_toEndOf="@+id/reliance_rate_pre_round"
                app:layout_constraintTop_toBottomOf="@+id/textView6"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.33" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/ready_next_round"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.1"
            android:text="@string/ready" />

        <LinearLayout
            android:id="@+id/next_round_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_for_other_players"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>